<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    tools:context=".descfragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_height="228dp"
            android:layout_width="240dp"
            android:src="@color/common_google_signin_btn_text_dark_disabled"
            android:layout_marginTop="40dp"
            android:id="@+id/imageholder"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aadahr Number"
                android:textSize="25sp"
                android:textColor="#000"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/aadhar_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/aadhar_number"
                android:layout_marginLeft="20dp"
                android:textColor="#000"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="Age"
                android:textSize="25sp"
                android:textColor="#000"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/age"
                android:layout_marginLeft="20dp"
                android:textColor="#000"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="Location"
                android:textSize="25sp"
                android:textColor="#000"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Location"
                android:layout_marginLeft="20dp"
                android:textColor="#000"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="25sp"
                android:textColor="#000"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/phone"
                android:textColor="#000"
                android:textSize="25sp" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>
</FrameLayout>